docs/src/styles/base.css
@import url("https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;600;700&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;

.text-gradient {
  @apply text-transparent bg-clip-text bg-gradient-to-r from-indigo-500 from-10% via-sky-500 via-30% to-emerald-500 to-90%;
}

.github-logo {
  mask: url(/images/github-mark.svg) no-repeat center;
  mask-size: cover;
}

.btn:hover .github-logo {
  @apply transition-colors;
  background-color: white;
}

.search-input-button {
  @apply md:input md:input-bordered md:input-sm md:w-64 md:flex md:items-center md:cursor-text;
}

@media (max-width: 767px) {
  .search-input-button {
    @apply btn btn-circle btn-ghost;
  }
}

/* Article below */

article h1 {
  @apply text-2xl font-bold mt-lg mb-md text-gradient;
}

article h2 {
  @apply text-lg font-bold mt-lg mb-sm;
}

article h3 {
  @apply font-bold mt-sm mb-xs;
}

article ul {
  @apply list-disc px-md;
}

article ol {
  @apply list-decimal px-md;
}

article table {
  @apply table table-zebra;
}

article pre {
  @apply mockup-code my-sm;
}

article code {
  @apply bg-neutral-300;
}

article pre code {
  @apply px-md bg-transparent block;
}

article a {
  @apply link link-primary;
}

